--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,3 +8,4 @@
 @import url('./reset.css');
 @import url('./1-gallery.css');
 @import 'simplelightbox/dist/simple-lightbox.min.css';
+@import url('./index.css');
