--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -12,7 +12,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -39,15 +38,14 @@ body {
   border-radius: 4px;
   width: 360px;
   padding: 8px 16px;
-  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #2e2f42;
-  resize: none;
   outline: none;
+  resize: none;
   margin: auto;
 }
 
@@ -71,7 +69,6 @@ body {
   height: 40px;
   background: #4e75ff;
   border: none;
-  cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -79,7 +76,7 @@ body {
   letter-spacing: 0.04em;
   color: #fff;
   align-self: flex-start;
-  margin-top: auto;
+  /* margin-top: auto; */
 }
 
 .feedback-form button:hover {
