--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,8 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
-@import url('./index.css');
-@import url('./1-gallery.css');
-@import url('./2-form.css');
+@import url('./css/reset.css');
+@import url('./css/index.css');
+@import url('./css/1-gallery.css');
+@import url('./css/2-form.css');
 @import 'simplelightbox/dist/simple-lightbox.min.css';
